# picotron-on-modal

./: .gitmodules  LICENSE  README.md  hello.py  pyproject.toml
step1_modeling/: modal_app.py  model.py  train.py  utils.py
step8_pipeline_parallel_1f1b/: data_parallel.py  dataloader.py  modal_app.py  model.py  pipeline_parallel.py  process_group_manager.py  tensor_parallel.py  train.py
